# tom-calendar

./: CalendarEvent.py  calendar.db  clean.py  db.py  get_calendar.sh  main.py  parse.py  pyproject.toml  sync_google.py
schedule/: 1025.json  1444.json  1445.json  1486.json  811.json
